--- a/src/styling/pages/home.module.scss
+++ b/src/styling/pages/home.module.scss
@@ -28,7 +28,11 @@
 
   a {
     @include link();
-    color: $dark;
+    color: $dark !important;
+  }
+
+  button {
+    font-size: 0.2em;
   }
 }
 .welcome {
