--- a/src/styling/mixins/mixins.scss
+++ b/src/styling/mixins/mixins.scss
@@ -20,6 +20,10 @@
   font-size: 1.2em;
   font-family: $primary_font;
 
+  &:hover {
+    color: $light;
+  }
+
   @media (max-width: $phone) {
     font-size: 1em;
   }
