--- a/src/styling/layout/layout.module.scss
+++ b/src/styling/layout/layout.module.scss
@@ -2,6 +2,7 @@
 @import '../mixins/mixins.scss';
 
 .content {
+  position: relative;
   background-color: transparent;
   padding-top: $header_height;
   background-color: $dark;
